--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- 从该页面发出的请求不会包含referer -->
+    <meta name="referrer" content="never">
     <title>注册成功！</title>
 
     <style type="text/css">
