前后端文章阅读数完成，文章点赞修改完成

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -120,7 +120,7 @@
                         <a href="#" class="social-share-icon icon-qzone"></a>
                     </div>
                     <div class="article-button">
-                        <a class="article-btn" href="#">❤ 喜欢 ❤</a>
+                        <a class="article-btn" id="article-like">❤ 喜欢 ❤</a>
                     </div>
                     <hr/>
                     <div class="article-page">
@@ -285,6 +285,63 @@
 
         $("#clock").html(runTime);
     }
+</script>
+<!-- 点赞+1 -->
+<script type="text/javascript">
+    (function ($) {
+        $.extend({
+            tipsBox: function (options) {
+                options = $.extend({
+                    obj: null,  //jq对象，要在那个html标签上显示
+                    str: "+1",  //字符串，要显示的内容;也可以传一段html，如: "<b style='font-family:Microsoft YaHei;'>+1</b>"
+                    startSize: "12px",  //动画开始的文字大小
+                    endSize: "30px",    //动画结束的文字大小
+                    interval: 600,  //动画时间间隔
+                    color: "red",    //文字颜色
+                    callback: function () { }    //回调函数
+                }, options);
+                $("body").append("<span class='num'>" + options.str + "</span>");
+                var box = $(".num");
+                var left = (options.obj.offset().left + options.obj.width() / 2) + 80;
+                var top = (options.obj.offset().top - options.obj.height()) + 30;
+                box.css({
+                    "position": "absolute",
+                    "left": left + "px",
+                    "top": top + "px",
+                    "z-index": 9999,
+                    "font-size": options.startSize,
+                    "line-height": options.endSize,
+                    "color": options.color
+                });
+                box.animate({
+                    "font-size": options.endSize,
+                    "opacity": "0",
+                    "top": top - parseInt(options.endSize) + "px"
+                }, options.interval, function () {
+                    box.remove();
+                    options.callback();
+                });
+            }
+        });
+    })(jQuery);
+
+    function niceIn(prop){
+        prop.find('i').addClass('niceIn');
+        setTimeout(function(){
+            prop.find('i').removeClass('niceIn');
+        },1000);
+    }
+    $(function () {
+        $("#article-like").click(function () {
+            $.tipsBox({
+                obj: $(this),
+                str: "+1",
+                callback: function () {
+                }
+            });
+            niceIn($(this));
+        });
+    });
 </script>
 </body>
 </html>
