--- a/src/main/resources/templates/backStageUser.html
+++ b/src/main/resources/templates/backStageUser.html
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="tpl-left-nav-item">
-                        <a href="chart.html" class="nav-link tpl-left-nav-link-list" id="user-menu-reply">
+                        <a class="nav-link tpl-left-nav-link-list" id="user-menu-reply">
                             <i class="am-icon-wpforms"></i>
                             <span>&nbsp;&nbsp;评论回复</span>
                             <i class="tpl-left-nav-content tpl-badge-danger" id="user-menu-reply-count">
@@ -119,7 +119,7 @@
                 </ul>
             </div>
         </div>
-        <!--<div class="tpl-right">
+        <div class="tpl-right">
             <div class="user-head">
                 <div class="user-head-text">头像更换</div>
                 <hr style="width: 90%;"/>
@@ -178,8 +178,8 @@
             <div>
                 <a id="user-personal-profile">更新</a>
             </div>
-        </div>-->
-        <div class="tpl-right">
+        </div>
+        <!--<div class="tpl-right">
             <div>
                 <div class="user-reply">回复鸭</div>
                 <img id="user-reply-img" src="../static/img/replyImg.gif"/>
@@ -265,11 +265,12 @@
                 </div>
                 <hr style="margin-left: -20px;width: 93%;"/>
             </div>
+            <div id="user-reply-none">目前麻油任何人回复您的评论鸭~</div>
             <div>
                 <a class="user-prev">上一页</a>
                 <a class="user-next">下一页</a>
             </div>
-        </div>
+        </div>-->
     </div>
 
     <!-- 警告框 -->
@@ -279,7 +280,7 @@
     </div>
 
     <!-- 页面拉伸 -->
-    <div style="margin-top: 1015px; height: 150px;"></div>
+    <div id="user-paper-white" style="margin-top: 1015px; height: 150px;"></div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
